--- a/src/assets/scss/_table.scss
+++ b/src/assets/scss/_table.scss
@@ -15,6 +15,7 @@
         padding: 15px 20px;
         border-bottom: 0;
         font-weight: normal;
+        white-space: nowrap;
       }
     }
     tbody {
