add + edit user

--- a/src/components/common/header/styles.scss
+++ b/src/components/common/header/styles.scss
@@ -20,6 +20,7 @@
   font-family: Roboto;
   font-size: 18px;
   font-weight: 500;
+  outline: none!important;
 }
 .dropdown-user {
   padding: 20px;
