--- a/src/assets/scss/_modal.scss
+++ b/src/assets/scss/_modal.scss
@@ -1,7 +1,9 @@
 .modal-user {
   padding: 30px 40px 40px;
+  max-width: 915px;
   .close {
     opacity: 1;
+    outline: none;
   }
   .modal-title {
     font-size: 24px;
@@ -44,6 +46,6 @@
     height: 59px;
   }
   .modal-body {
-    padding: 30px 0 10px;
+    padding: 30px 40px 10px;
   }
 }
