fix fixed header

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -24,7 +24,6 @@ body {
   background: #f4f4f5;
   color: #282828;
   height: 100%;
-  padding-top: 65px;
 }
 input:focus,
 button:focus {
@@ -43,4 +42,7 @@ button:focus {
 }
 .ff14 {
   font-size: 14px;
+}
+.document {
+  padding-top: 65px;
 }
