Fix Login disabled state color.

--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -52,6 +52,9 @@
       background: #05486c;
       border-color: #05486c;
       min-width: 120px;
+      &:disabled {
+        opacity: 0.3;
+      }
     }
   }
 }
