Fix “First" and "Last” text color of Pagination.

--- a/src/assets/scss/_table.scss
+++ b/src/assets/scss/_table.scss
@@ -50,6 +50,8 @@
       align-items: center;
       & > .page-link {
         border-radius: 4px;
+        color: #8e8e93;
+        border-color: #bbb;
       }
     }
   }
