--- a/src/components/LeadDetail/breadcrumb/styles.scss
+++ b/src/components/LeadDetail/breadcrumb/styles.scss
@@ -3,4 +3,26 @@
   box-shadow: 0 2px 70px 0 rgba(0, 0, 0, 0.09);
   background-color: #f9f9f9;
   border-top: 1px solid #efeff4;
+  margin-bottom: 0;
+  &-item {
+    a {
+      color: #8e8e93;
+    }
+    & + & {
+      font-size: 16px;
+      font-weight: bold;
+      color: #05486c;
+      &::before {
+        content: '';
+        width: 8px;
+        height: 8px;
+        border: solid #8e8e93;
+        border-width: 0 2px 2px 0;
+        margin-right: 0.5rem;
+        padding-right: 0;
+        margin-bottom: 2px;
+        transform: rotate(-45deg);
+      }
+    }
+  }
 }
