--- a/src/assets/scss/_form.scss
+++ b/src/assets/scss/_form.scss
@@ -84,8 +84,12 @@
   }
   .form-control[type='radio'] {
     position: absolute;
-    z-index: -1;
+    z-index: 1;
     opacity: 0;
+    width: 20px;
+    height: 20px;
+    top: 3px;
+    left: -4px;
     & + label {
       position: relative;
       margin-bottom: 0;
@@ -130,7 +134,6 @@
     position: absolute;
     left: 13px;
     top: 50%;
-    transform: translateY(-50%);
     font-size: 16px;
     color: #a5a7aa;
     transition: all 0.2s ease-in;
