--- a/src/pages/ManageLead/styles.scss
+++ b/src/pages/ManageLead/styles.scss
@@ -13,12 +13,12 @@
   font-family: Helvetica;
   margin-bottom: 15px;
 }
-.box-alert{
+.box-alert {
   font-size: 12px;
   display: flex;
   align-items: center;
   height: 100%;
-  &__inner{
+  &__inner {
     background: #f9f9f9;
     border: 1px solid #bbb;
     padding: 9px 14px 9px 32px;
@@ -26,18 +26,23 @@
     color: #444444;
     position: relative;
   }
-  &__icon{
+  &__icon {
     position: absolute;
     left: 10px;
     top: 13px;
     font-size: 20px;
   }
 }
-.form-row-detail{
+.form-row-detail {
   margin-left: -18px;
   margin-right: -18px;
-  .form-group{
+  .form-group {
     padding: 0 18px;
     margin-bottom: 30px;
   }
+}
+.meetingAvailability {
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
 }
