--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -18,6 +18,7 @@
 @import './dropdown';
 @import './modal';
 @import './form';
+@import './notification';
 @import './footer';
 body {
   font-family: 'Helvetica', sans-serif;
@@ -45,4 +46,8 @@ button:focus {
 }
 .document {
   padding-top: 65px;
+}
+.btn-toolbar {
+  flex-wrap: nowrap;
+  align-items: center;
 }
