Add validation for LeadDetail.

--- a/src/components/LeadDetail/time/Calendar/style.scss
+++ b/src/components/LeadDetail/time/Calendar/style.scss
@@ -44,8 +44,8 @@
         }
         &__today {
           position: relative;
-          background-color: #11a6b0;
-          color: white;
+          // background-color: #11a6b0;
+          // color: white;
           &::before {
             content: 'today';
             position: absolute;
