--- a/src/assets/scss/_form.scss
+++ b/src/assets/scss/_form.scss
@@ -55,8 +55,9 @@
   }
   .form-control[type='checkbox'] {
     position: absolute;
-    z-index: -1;
+    z-index: 1;
     opacity: 0;
+    top: 2px;
     & + label {
       position: relative;
       margin-bottom: 0;
