--- a/src/assets/scss/_dropdown.scss
+++ b/src/assets/scss/_dropdown.scss
@@ -32,6 +32,7 @@
   &__menu {
     border-color: #11a6b0;
     display: block;
+    z-index: 10!important;
   }
   &__option {
     &--is-selected, &:hover {
