--- a/src/pages/ManageLead/styles.scss
+++ b/src/pages/ManageLead/styles.scss
@@ -25,6 +25,7 @@
     border-radius: 4px;
     color: #444444;
     position: relative;
+    margin-right: -10px;
   }
   &__icon {
     position: absolute;
