--- a/src/assets/scss/_form.scss
+++ b/src/assets/scss/_form.scss
@@ -5,6 +5,11 @@
   justify-content: flex-start;
   width: 100%;
   height: 100%;
+  &.undefined{
+    .form-control[type='radio'] + label:before{
+      border-color: #c7c7cc;
+    }
+  }
   label {
     font-size: 16px;
     color: #a5a7aa;
@@ -159,7 +164,6 @@
 
 .group-select {
   position: relative;
-  height: 100%;
   &__menu {
     z-index: 9 !important;
   }
