--- a/src/assets/scss/_table.scss
+++ b/src/assets/scss/_table.scss
@@ -30,6 +30,15 @@
           color: #3f3f3f;
           padding: 20px;
           border-top: 0;
+          .btn.btn-outline-secondary {
+            width: 40px;
+            height: 40px;
+            background: #efefef;
+            padding: 10px;
+          }
+          .btn.btn-primary.w-100 {
+            height: 40px;
+          }
         }
       }
     }
