--- a/src/pages/ManageUser/styles.scss
+++ b/src/pages/ManageUser/styles.scss
@@ -16,18 +16,20 @@
   }
   &__search {
     position: relative;
-    min-width: 200px;
+    width: 220px;
     .form-control {
       border-radius: 20px;
-      padding-left: 30px;
+      padding-left: 40px;
+      color: #3f3f3f;
       &::placeholder {
         color: #a5a7aa;
         font-size: 16px;
+        font-weight: 200;
       }
     }
     .top-control__search__icon {
       position: absolute;
-      left: 10px;
+      left: 20px;
       top: 50%;
       transform: translateY(-50%);
     }
