--- a/src/components/LeadDetail/time/SelectDate/style.scss
+++ b/src/components/LeadDetail/time/SelectDate/style.scss
@@ -1,7 +1,11 @@
 .titleCalendar {
   font-size: 20px;
   color: #8e8e93;
-  padding: 15px 10px 0;
+  padding: 0;
+  align-items: center;
+  & > p{
+    margin-bottom: 0;
+  }
 }
 .select-year {
   width: 50px;
