--- a/src/pages/ManageLead/styles.scss
+++ b/src/pages/ManageLead/styles.scss
@@ -46,4 +46,7 @@
   background-color: white;
   padding: 20px;
   box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
+  .form-row-detail .form-group{
+    margin-bottom: 0;
+  }
 }
