--- a/src/components/LeadDetail/time/SelectDate/style.scss
+++ b/src/components/LeadDetail/time/SelectDate/style.scss
@@ -10,10 +10,22 @@
 .select-year {
   width: 50px;
   min-width: 100px;
+  font-size: 16px;
+  .wrap-select__single-value{
+    color: #282828;
+    font-weight: normal;
+    font-size: 16px;
+  }
 }
 .select-month {
   width: 130px;
   min-width: 130px;
+  font-size: 16px;
+  .wrap-select__single-value{
+    color: #282828;
+    font-weight: normal;
+    font-size: 16px;
+  }
 }
 .wrapper-calendar {
   .DayPickerNavigation_button {
