--- a/src/components/LeadDetail/time/SelectTime/style.scss
+++ b/src/components/LeadDetail/time/SelectTime/style.scss
@@ -13,6 +13,8 @@
     text-align: center;
     border-collapse: separate;
     border-spacing: 10px 20px;
+    table-layout: fixed;
+    width: 100%;
     td {
       padding: 5px 15px;
       border-radius: 18px;
@@ -21,17 +23,21 @@
       background-color: #f9f9f9;
       border-radius: 18px;
       border: solid 1px #e5e5ea;
+      font-weight: 200;
+      box-sizing: border-box;
       &:hover {
         cursor: pointer;
         background-color: #11a6b0;
         border-color: #11a6b0;
         color: white;
         transition: all 0.3s;
+        font-weight: bold;
       }
       &.active {
         background-color: #11a6b0;
         border-color: #11a6b0;
         color: white;
+        font-weight: bold;
       }
     }
   }
