--- a/src/pages/ManageLead/styles.scss
+++ b/src/pages/ManageLead/styles.scss
@@ -45,6 +45,7 @@
 .meetingAvailability {
   background-color: white;
   padding: 20px;
+  border-radius: 4px;
   box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
   .form-row-detail .form-group{
     margin-bottom: 0;
