Disable "hour fields" are not available at the moment.

--- a/src/components/LeadDetail/time/SelectTime/style.scss
+++ b/src/components/LeadDetail/time/SelectTime/style.scss
@@ -39,6 +39,10 @@
         color: white;
         font-weight: bold;
       }
+      &.notActive {
+        opacity: 0.3;
+        pointer-events:none;
+      }
     }
   }
 }
