Add ModalReschedule to Designer.

--- a/src/assets/scss/_modal.scss
+++ b/src/assets/scss/_modal.scss
@@ -14,7 +14,7 @@
   }
   .wrap-select__value-container {
     justify-content: flex-start;
-    height: 59px;
+    // height: 59px;
   }
   .modal-body {
     padding: 30px 40px 10px;
