--- a/src/assets/scss/_form.scss
+++ b/src/assets/scss/_form.scss
@@ -5,8 +5,8 @@
   justify-content: flex-start;
   width: 100%;
   height: 100%;
-  &.undefined{
-    .form-control[type='radio'] + label:before{
+  &.undefined {
+    .form-control[type='radio'] + label:before {
       border-color: #c7c7cc;
     }
   }
@@ -222,6 +222,56 @@
   svg {
     path {
       fill: #11a6b0;
+    }
+  }
+}
+
+.custom-control {
+  position: relative;
+  .custom-control-input[type='checkbox'] {
+    position: absolute;
+    z-index: 1;
+    opacity: 0;
+    & + label {
+      position: relative;
+      margin-bottom: 0;
+      vertical-align: top;
+      left: 0;
+      padding-left: 1.25rem;
+      &::after,
+      &::before {
+        position: absolute;
+        display: block;
+        width: 1rem;
+        height: 1rem;
+        content: '';
+        transition: all 0.3s;
+      }
+      &::before {
+        height: 18px;
+        width: 38px;
+        background-color: #bbb;
+        border: 5px solid #bbb;
+        border-radius: 9px;
+        box-shadow: none;
+      }
+      &::after {
+        top: 0.3rem;
+        left: -2.2rem;
+        background-color: #11a6b0;
+      }
+    }
+    &:checked ~ label::before {
+      border-width: 4px;
+      border-color: #11a6b0 !important;
+      background-color: #11a6b0 !important;
+    }
+    &:focus:not(:checked) ~ label::before {
+      border: 1px solid #bbb;
+      background-color: #bbb;
+    }
+    &:checked ~ label::after {
+      transform: translateX(1.2rem) !important;
     }
   }
 }
